# makeUpdate

./: CMakeLists.txt  README.md  job.cpp  job.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
